# rust-wsman-messages

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/apf/: Cargo.toml
crates/apf/src/: session.rs  transport.rs
crates/apf/tests/: apf_transport.rs  channel.rs  data.rs  handshake.rs  message.rs  recovery.rs
crates/apf/tests/common/: mod.rs
crates/wsman-amt/: Cargo.toml
crates/wsman-amt/examples/: get_general_settings.rs
crates/wsman-amt/src/: lib.rs  prelude.rs
crates/wsman-amt/src/general/: mod.rs  parse.rs  service.rs  types.rs
crates/wsman-amt/src/hostbasedsetup/: mod.rs  parse.rs  service.rs  types.rs
crates/wsman-amt/src/setupandconfiguration/: mod.rs  parse.rs  service.rs  types.rs
crates/wsman-amt/tests/: e2e_apf.rs  general.rs  general_e2e.rs  general_parse.rs  hostbasedsetup.rs  setupandconfiguration.rs
crates/wsman-apf/: Cargo.toml
crates/wsman-apf/src/: apf_transport.rs  error.rs  lib.rs  message.rs  session.rs  transport.rs
crates/wsman-apf/tests/: apf_transport.rs  channel.rs  data.rs  handshake.rs  message.rs  recovery.rs
crates/wsman-apf/tests/common/: mod.rs
crates/wsman-core/: Cargo.toml
crates/wsman-core/src/: client.rs  digest.rs  envelope.rs  error.rs  lib.rs  parse.rs  response.rs  schema.rs  selector.rs  service.rs  transport.rs
crates/wsman-core/tests/: client_retry.rs  client_wiremock.rs  digest.rs  envelope_golden.rs  parse_golden.rs  schema.rs  selector.rs
crates/wsman-core/tests/fixtures/: envelope_enumerate.xml  envelope_get.xml  envelope_pull.xml  envelope_put.xml
crates/wsman-reqwest/: Cargo.toml
crates/wsman-reqwest/src/: lib.rs
crates/wsman-reqwest/tests/: reqwest_transport.rs
