[workspace]
members = [
    "crates/wsman-apf",
    "crates/wsman-core",
    "crates/wsman-amt",
    "crates/wsman-reqwest",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/rsdmike/rust-wsman-messages"

[workspace.dependencies]
# no_std + alloc
md-5 = { version = "0.10", default-features = false }
thiserror = { version = "2", default-features = false }
# std-only (wsman-reqwest)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# test deps
pretty_assertions = "1"
