[package]
name = "wsman-amt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wsman-core = { path = "../wsman-core" }

[dev-dependencies]
wsman-apf = { path = "../wsman-apf" }
pretty_assertions.workspace = true
