[package]
name = "wsman-apf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
wsman-core = { path = "../wsman-core" }

[dev-dependencies]
pretty_assertions.workspace = true
