[package]
name = "wsman-reqwest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wsman-core = { path = "../wsman-core" }
reqwest.workspace = true

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pretty_assertions.workspace = true
